# vue

./: .env  .env.example  .gitignore  compose.yaml  init.sh  manifest.json  package-lock.json  package.json
backend/: requirements.txt
backend/app/: config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/app/models/: user.py
backend/app/routers/: translation.py  trivia.py  users.py
backend/app/schemas/: translation.py
backend/app/services/: get_trivia.py  translation.py
containers/fastapi/: .dockerignore  Dockerfile
containers/mysql/: .dockerignore  Dockerfile
containers/mysql/init/: init.sql
containers/react/: Dockerfile
frontend/: package-lock.json  package.json
frontend/app/: index.html  vite.config.js
frontend/src/: App.vue
frontend/src/stores/: useKeyStore.js
src/: App.vue  background.js  content.js  index.html
src/api/: fetchTrivia.js  translateWithDeepl.js
